--- a/7.面向对象.md
+++ b/7.面向对象.md
@@ -107,3 +107,47 @@ public class Main {
 在上述示例中，`Person` 类具有两个构造方法：无参构造方法和带参构造方法。通过使用这两个构造方法，我们可以创建不同初始化状态的 `Person` 对象。在 `main` 方法中，首先使用无参构造方法创建了一个默认的 `person1` 对象，然后使用带参构造方法创建了一个带有指定名称和年龄的 `person2` 对象。最后，通过调用对象的 setter 方法修改了 `person1` 对象的属性。
 
 构造方法在对象创建时自动调用，用于初始化对象的状态，可以确保
+
+
+
+
+
+- #### 封装
+
+  - 程序设计要追求”高内聚，低耦合“。高内聚就是类的内部数据操作细节自己完成，不允许外部干涉，低耦合就是仅暴露少量的方法给外部使用。
+  - 封装:通常，应禁止直接访问一个对象中数据的实际表示,而应通过操作接口来访问，这成为信息隐藏
+  - 属性私有，get/set
+
+
+
+封装（Encapsulation）是面向对象编程中的一项重要特性，它将数据和操作封装在类中，通过定义访问修饰符控制对数据的访问和操作。封装的目的是隐藏对象的内部实现细节，提供对外部的接口来访问和操作对象的状态，同时保护数据的完整性和安全性。
+
+封装的特性包括：
+
+1. 数据隐藏：通过将数据声明为私有（private），限制了对数据的直接访问，使得数据对外部是不可见的。只能通过类提供的公共方法来访问和修改数据。这样可以防止外部对数据的意外修改和破坏，确保数据的有效性和一致性。
+
+2. 访问器方法（Accessor Methods）：也称为 getter 和 setter 方法，用于获取和设置对象的私有属性。通过公共的访问器方法，外部可以间接地访问和修改对象的属性值。访问器方法通常以 getXXX() 和 setXXX() 的命名方式，分别用于获取和设置属性 XXX 的值。
+
+3. 类的方法封装：除了封装数据，封装也可以应用于类的方法。类可以提供公共的方法来执行操作，而隐藏实际的实现细节。这样外部只需要关注如何调用方法，而无需了解方法内部的具体实现。
+
+4. 封装的优点：
+   - 提高代码的可维护性和可重用性：封装将数据和操作封装在类内部，使得代码更加模块化和可读性更强，便于理解和修改。
+   - 隐藏实现细节：封装将对象的内部实现细节隐藏起来，对外部提供统一的接口，减少了外部代码对内部的依赖和影响，提高了代码的安全性。
+   - 保护数据的完整性：封装限制了对数据的直接访问和修改，只能通过定义的访问器方法来进行操作，确保数据的有效性和一致性。
+   - 提供更好的代码组织和管理：封装将数据和操作组合在一起，形成一个独立的模块，方便代码的组织、管理和维护。
+
+在 Java 中，通过使用访问修饰符（如 private、public、protected）来控制成员变量和方法的访问级别，实现封装的特性。私有的成员变量只能在类内部访问，公共的访问器方法提供了对私有成员变量的间接访问。这种封装机制可以使得对象的状态安全地被外部代码使用，并且提供了灵活性和可扩展性。
+
+
+
+- #### 继承
+
+  - 继承的本质是对某一批类的抽象，从而实现对现实世界更好的建模
+  - extands的意思是扩展，子类的是父类的的扩展
+  - Java中类只有单继承，没有多继承
+  - 继承是类和类之间的一种关系，除此之外，类和类之间的关系还有依赖、组合、聚合等
+  - 继承关系的两个类、一个为子类、一个为父类，子类继承父类使用关键字extends来表示
+  - 子类和父类之间，从意义上讲应该具有 is a 的关系
+  - object类
+  - super
+  - 方法重写
