--- a/3.Java基础.md
+++ b/3.Java基础.md
@@ -62,7 +62,7 @@
 
 ​						 变量声明是一条完整的语句、因此每一个声明都必须以分号结束
 
-1. 类变量：
+1. 类变量： static 
 2. 实列变量：从属于对象， 通过new 出一个实列
 3. 局部变量：必须声明和初始化值 写在方法里
 4. 常量：final定义常量 值不可更改
