--- a/100.扩展.md
+++ b/100.扩展.md
@@ -1,4 +1,4 @@
-### 值传递和引用传递
+### 1.值传递和引用传递
 
 在 Java 中，参数传递可以分为值传递（Pass-by-Value）和引用传递（Pass-by-Reference）两种方式。
 
@@ -69,3 +69,73 @@ After method call: [10, 2, 3]
 可以看到，通过将数组对象作为参数传递给方法，并在方法内部修改数组元素的值，原始数组的内容也发生了改变，说明对象是通过引用传递进行参数传递的。
 
 需要注意的是，在 Java 中，虽然使用引用传递传递的是对象的引用，但是并不允许直接修改传递的引用指向另一个对象。在方法内部对参数进行赋值操作（`array = new int[3]`）不会改变原始对象的引用，只会改变局部变量的引用，不会影响原始变量的引用。
+
+
+
+### 2.重写和重载的区别
+
+重写（Override）和重载（Overload）是Java中的两个概念，它们分别用于描述不同的方法行为。
+
+1. 重写（Override）：
+重写指的是在子类中重新定义父类已有的方法，方法名、参数列表和返回类型都必须与父类方法相同。重写实现了子类对父类方法的重新实现，子类对象在调用该方法时会执行子类中的定义，而不是父类中的方法。
+重写的特点：
+- 方法名、参数列表和返回类型必须与父类方法相同。
+- 子类方法的访问修饰符不能低于父类方法的修饰符。
+- 子类方法不能抛出比父类方法更宽泛的检查异常。
+- 子类方法可以使用`@Override`注解来标识其重写关系。
+
+2. 重载（Overload）：
+重载指的是在同一个类中定义多个方法，它们具有相同的方法名但参数列表不同。重载实现了一个类中多态性的表现，可以通过不同的参数个数或类型来区分调用哪个方法。
+重载的特点：
+- 方法名相同，但参数列表必须不同（参数个数或类型不同）。
+- 返回类型可以相同也可以不同。
+- 访问修饰符、抛出的异常以及方法体都可以不同。
+- 重载不依赖于继承关系，可以在同一个类中定义。
+
+总结：
+- 重写是子类对父类方法的重新实现，方法名、参数列表和返回类型必须相同。
+- 重载是在同一个类中定义多个方法，方法名相同但参数列表不同。
+- 重写是多态性的一种表现，实现于子类中；重载是多态性的一种表现，实现于同一个类中。
+- 重写用于实现不同类之间的多态性，重载用于提供多个方法的选择。
+
+
+
+### this
+
+在Java中，构造器是用于创建对象并初始化其状态的特殊方法。构造器中是否可以使用`this`关键字取决于具体的情况，以下是使用`this`关键字的几种情况和限制：
+
+1. 使用`this`调用其他构造器：在同一个类的构造器中，可以使用`this`关键字调用该类的其他构造器。这种用法称为构造器的重载。通过`this`调用其他构造器时，必须将`this`作为构造器的第一条语句，用于初始化对象的状态。
+
+```java
+public class MyClass {
+    private int value;
+
+    public MyClass() {
+        this(0); // 调用带参数的构造器
+    }
+
+    public MyClass(int value) {
+        this.value = value;
+    }
+}
+```
+
+2. 在构造器中使用`this`引用当前对象：在构造器中可以使用`this`关键字引用当前对象，用于区分成员变量和局部变量同名的情况，或者在构造器中传递当前对象给其他方法。
+
+```java
+public class MyClass {
+    private int value;
+
+    public MyClass(int value) {
+        this.value = value;
+    }
+
+    public void printValue() {
+        System.out.println(value);
+    }
+}
+```
+
+3. 静态方法和静态初始化块中不能使用`this`：`this`关键字指向当前对象，而静态方法和静态初始化块在对象创建之前就执行，不存在当前对象的引用，因此无法使用`this`关键字。
+
+总之，`this`关键字用于引用当前对象，在构造器中可以使用`this`调用其他构造器或引用当前对象。但需要注意的是，在静态方法和静态初始化块中不能使用`this`关键字。
