--- a/7.面向对象.md
+++ b/7.面向对象.md
@@ -1,3 +1,5 @@
+
+
 ### 面向对象
 
 1. 面向对象编程的本质就是 以类的方式组织代码，以对象的方式封装数据
@@ -151,3 +153,357 @@ public class Main {
   - object类
   - super
   - 方法重写
+
+
+
+#### 方法重写
+
+在Children.java中
+
+```java
+package com.oop.againLoad;
+
+public class Children extends Parent {
+    ////静态方法
+    // public static void test() {
+    //     System.out.println("Children");
+    // }
+
+    // public void test1() {
+    //     System.out.println("Children");
+    // }
+
+
+    //alt + Insert 重写方法 @
+    @Override //注解有功能的注释
+    public void test1() {
+        // super.test1();
+        System.out.println("Children");
+    }
+}
+```
+在Parent.java中
+```java
+package com.oop.againLoad;
+
+public class Parent {
+     ////静态方法
+    // public static void test() {
+    //     System.out.println("Parent");
+    // }
+
+    public void test1() {
+        System.out.println("Parent");
+    }
+    
+    public void test2() {
+        System.out.println("test2.Parent");
+    }
+
+}
+```
+
+在AppMainChildren.java中调用
+
+```java
+package com.oop.againLoad;
+
+public class AppMainChildren {
+    public static void main(String[] args) {
+
+        // 创建 children类
+        Children children = new Children();
+        // children.test(); // children类
+        children.test1(); //打印出 children
+
+        //方法的调用的 只和左边，定义的数据类型有关 ,左边数据类型为 Parent
+        // 父类的引用 指向了子类
+        Parent parent = new Children();
+        // parent.test(); // Parent类
+        parent.test1();//打印出 children
+        
+        // test2 在父类中存在， children类继承了Parent,其中也有此test2方法。如果在children类中有个一样的 方法名、参数，test2。就会执行该test2
+        // 就是重写，有点执行顺序的 从上到下
+        parent.test2();
+    }
+    
+}
+```
+
+⭐⭐⭐ 前提 Children类 和 Parent类 中都存在名为 `test1()` 的非静态方法。
+
+🌏  静态方法是与类相关联而不是与对象相关联的，它们在编译时就确定了调用的方法， Parent parent = new Children(); 这句话实际上 是 一个 Children 类的对象并将其赋值给 Parent 类型的变量 parent时，编译器会根据变量的类型 Parent  来解析调用的方法
+
+🌏 静态方法是与类相关联而不是与对象相关联的，它们在编译时就确定了调用的方法，静态方法的绑定是在编译时完成的，不受对象的实际类型影响
+
+🌏 静态方法是类的方法，非静态是对象的方法（类似于 实例变量的概念)
+
+
+
+🌏🌏 🌏 🌏非静态方法 调用时候 是在运行时动态绑定的，编译器在编译时只检查变量的类型，而不考虑运行时对象的类型。
+
+ 			因为在 Java 中，通过 父类类型的引用 指向子类对象时，⭐⭐编译时类型是父类类型，而运行时类型是子类类型。
+
+​		编译器只会检查编译时类型所拥有的方法，而不考虑运行时类型。因此，编译器在这种情况下只知道 `parent` 是类 Parent 的对象，而不知道它实际上是类 Children 的对象。所以编译器会去查找类 Parent  中是否存在 `test()` 方法，如果存在则通过编译。
+
+编译没有报错，运行时，实际执行的是对象的实际类型Children 的方法
+
+
+
+C、P  test是静态方法。parent.test1()调用了是Parent类中的方法。parent是Parent类定义的
+
+test1是非静态方法，调用方法将取决于对象的实际类型。 parent 调用的 对象的方法， parent 是 Children 类 new 出来的对象，因此调用了Children 中的的方法。
+
+
+
+#### 重写：
+
+- 需要有继承关系，子类重写 父类的方法  alt+insert  /  @Override
+- 方法名必须相同
+- 参数列表必须相同s
+- 修饰符：范围可以扩大，但不能缩小 public>protected>default>private
+- 抛出的异常：范围可以被缩小，但不能扩大。 ClassNotFoundException < Exception
+
+重写:子类的方法和父类必须要一致，方法体不同。
+
+
+
+
+
+### 多态
+
+在Java中，当我们使用 `B b = new A();` 这样的语句时，我们实际上是在创建一个 `A` 类的对象，并将其赋值给 `B` 类型的变量 `b`。这被称为向上转型（upcasting）或者称为多态（polymorphism）
+
+⭐父类类型的引用 指向子类对象
+
+- 及同一个方法可以根据发送对象的不同而采用多种不同的行为方式.
+- 一个对象的实际类型是确定的，但可以指向对象的 引用的类型可以有很多(父类、有关系的类)
+- 多态存在的条件
+  - 有继承关系
+  - 子类重写父类方法
+  - 父类引用指向子类对象
+- instanceof（类型转换） 引用类型
+
+⭐⭐注意：多态是方法的多态，属性没有多态性
+
+
+
+```
+* // 哪些方法不需要重写，
+* 1.static 方法，属于类，它不属于实例
+* 2. final 常量
+* 3.private方法
+```
+
+
+
+Children.java
+
+```java
+package com.oop.dynamic;
+
+public class Children extends Parent {
+    @Override
+    public void run() {
+        System.out.println("Children.run");
+    }
+
+    public void eat() {
+        System.out.println("Children.eat");
+    }
+}
+```
+
+Parent.java
+
+```java
+package com.oop.dynamic;
+
+public class Parent {
+    public void run() {
+        System.out.println("Parent.run");
+    }
+}
+```
+
+AppMainChildren.java
+
+```java
+package com.oop.dynamic;
+
+public class AppMainChildren {
+    public static void main(String[] args) {
+        Children children = new Children();
+
+        // 父类类型 Parent 的引用指向 子类对象 new Children()
+        // 左侧编译  右侧运行
+        Parent parent = new Children();
+        
+        
+        children.eat();
+        /*
+            编译器只会检查编译时类型所拥有的。
+        *   Parent 类型中没有eat方法,报错。
+        * */
+        // parent.eat();
+        //需要进行类型转换  
+        ((Children) parent).eat(); 
+
+
+    }
+}
+```
+
+
+
+
+
+### 抽象类
+
+抽象类是一种特殊的类，它不能被实例化，只能被继承。抽象类用关键字 `abstract` 声明。抽象类可以包含抽象方法和具体方法，它为其子类提供了一种通用的模板或蓝图。
+
+抽象类的主要目的是为了被子类继承和实现。它可以定义一些共同的行为和属性，并强制子类实现特定的方法。如果一个类继承了抽象类，那么它必须实现抽象类中的所有抽象方法，除非该类本身也声明为抽象类。
+
+以下是抽象类的一些特点：
+
+1. 抽象类不能被实例化：不能直接创建抽象类的对象，只能用它作为父类来创建子类的对象。
+
+2. 抽象方法：抽象类可以包含抽象方法，这些方法没有具体的实现，只有方法的声明，使用 `abstract` 关键字进行修饰。子类必须实现抽象类中的所有抽象方法。
+
+3. 具体方法：抽象类也可以包含具体的方法实现，这些方法在抽象类中有默认的实现，子类可以直接继承和使用。
+
+4. 可以拥有构造方法：抽象类可以有构造方法，用于初始化抽象类的成员变量。
+
+5. 继承和实现：子类通过继承抽象类来获取共同的属性和方法，同时实现抽象类中的抽象方法。
+
+下面是一个抽象类的示例：
+
+```java
+abstract class Shape {
+    private String color;
+
+    public Shape(String color) {
+        this.color = color;
+    }
+
+    public String getColor() {
+        return color;
+    }
+
+    public abstract double getArea();
+}
+
+class Circle extends Shape {
+    private double radius;
+
+    public Circle(String color, double radius) {
+        super(color);
+        this.radius = radius;
+    }
+
+    @Override
+    public double getArea() {
+        return Math.PI * radius * radius;
+    }
+}
+
+class Rectangle extends Shape {
+    private double width;
+    private double height;
+
+    public Rectangle(String color, double width, double height) {
+        super(color);
+        this.width = width;
+        this.height = height;
+    }
+
+    @Override
+    public double getArea() {
+        return width * height;
+    }
+}
+
+public class Main {
+    public static void main(String[] args) {
+        Shape circle = new Circle("Red", 5.0);
+        Shape rectangle = new Rectangle("Blue", 4.0, 6.0);
+
+        System.out.println("Circle Area: " + circle.getArea());
+        System.out.println("Rectangle Area: " + rectangle.getArea());
+    }
+}
+```
+
+在上面的例子中，`Shape` 是一个抽象类，它包含一个抽象方法 `getArea()` 和一个具体方法 `getColor()`。`Circle` 和 `Rectangle` 是 `Shape` 的子类，它们实现了 `getArea()` 方法，并可以通过调用父类的
+
+构造方法来设置颜色属性。在 `Main` 类中，我们创建了一个圆和一个矩形的对象，并调用它们的 `getArea()` 方法。
+
+
+
+
+
+### 抽象类和多态的区别
+
+抽象类和多态是面向对象编程中的两个重要概念，它们有以下区别：
+
+1. 定义和使用方式：抽象类是一种特殊的类，用 `abstract` 关键字声明，它可以包含抽象方法和具体方法，不能被实例化，只能被继承。多态是一种编程概念，通过父类类型的引用指向子类对象，实现同一操作具有不同行为的能力。
+
+2. 目的和应用场景：抽象类的主要目的是作为一种模板或蓝图，定义通用的行为和属性，要求子类实现特定的方法，适用于具有共同特征和行为的类层级结构。多态的目的是在程序运行时根据实际对象的类型决定调用哪个对象的方法，提高代码的灵活性和可扩展性，适用于处理不同子类对象的情况。
+
+3. 继承关系：抽象类通过继承关系实现，子类必须继承抽象类并实现其抽象方法。多态通过父类和子类之间的继承关系实现，子类可以覆盖（重写）父类的方法。
+
+4. 对象实例化：抽象类不能被实例化，只能用它作为父类来创建子类s的对象。多态可以通过父类类型的引用指向子类对象，实现不同对象的统一处理。
+
+5. 编译时和运行时行为：抽象类在编译时确定具体的类型和方法，但在运行时无法直接使用抽象类的对象，他不能被new。多态在编译时使用父类的类型检查代码，但在运行时根据实际对象的类型决定调用哪个对象的方法。
+
+总的来说，抽象类是一种用于定义类层级结构和行为模板的概念，要求子类实现抽象方法；而多态是一种编程技巧，通过父类引用指向子类对象，实现同一操作具有不同行为的能力。抽象类和多态可以结合使用，通过抽象类作为父类，利用多态的特性来处理不同子类对象的情况。
+
+
+
+
+
+### 接口
+
+接口（Interface）在Java中是一种特殊的引用类型，它定义了一组方法的签名（方法名称、参数列表和返回类型）但没有提供具体的实现。接口可以看作是一种契约，规定了类应该实现的方法，并提供了一种多态的机制。
+
+以下是一些关于接口的要点：
+
+1. 定义接口：
+   ```java
+   public interface MyInterface {
+       void method1(); // 抽象方法
+       int method2(int param); // 抽象方法
+   }
+   ```
+   接口使用 `interface` 关键字进行定义。接口中的方法都是抽象方法，不包含具体的实现。
+
+2. 实现接口：
+   ```java
+   public class MyClass implements MyInterface {
+       @Override
+       public void method1() {
+           // 实现method1方法的具体逻辑
+       }
+   
+       @Override
+       public int method2(int param) {
+           // 实现method2方法的具体逻辑
+           return param * 2;
+       }
+   }
+   ```
+   通过 `implements` 关键字，一个类可以实现一个或多个接口。实现接口的类必须提供接口中定义的所有方法的具体实现。
+
+3. 接口的特点：
+   - 接口中的方法默认为抽象方法，不包含方法体。因此，实现接口的类必须提供方法的具体实现。
+   - 接口中可以定义常量，这些常量默认为 `public static final` 类型。
+   - 一个类可以同时实现多个接口，实现了接口的类可以被当作接口类型来引用，实现了多态的效果。
+   - 接口可以继承其他接口，通过 `extends` 关键字。
+
+4. 接口与抽象类的区别：
+   - 接口只包含抽象方法和常量，不包含属性和具体方法的实现；而抽象类可以包含属性、方法（包括具体方法和抽象方法）。
+   - 类只能单继承，但可以实现多个接口；一个抽象类可以继承一个类或抽象类，并且可以实现多个接口。
+   - 接口中的方法默认为 `public`，并且不可修改；抽象类中的方法可以有不同的访问修饰符，并且可以被子类修改。
+   - 接口中的变量默认为 `public static final` 类型的常量；抽象类中的变量可以有不同的访问修饰符，但没有默认的修饰符。
+
+通过接口，可以实现类之间的解耦，提供了一种标准化的方法定义，使得代码更加灵活、可扩展和可维护。
