--- a/7.面向对象.md
+++ b/7.面向对象.md
@@ -499,7 +499,8 @@ public class Main {
    - 接口中可以定义常量，这些常量默认为 `public static final` 类型。
    - 一个类可以同时实现多个接口，实现了接口的类可以被当作接口类型来引用，实现了多态的效果。
    - 接口可以继承其他接口，通过 `extends` 关键字。
-
+   - 接口不能被实例化，没有构造函数
+   
 4. 接口与抽象类的区别：
    - 接口只包含抽象方法和常量，不包含属性和具体方法的实现；而抽象类可以包含属性、方法（包括具体方法和抽象方法）。
    - 类只能单继承，但可以实现多个接口；一个抽象类可以继承一个类或抽象类，并且可以实现多个接口。
